[project]
name = "freelance-pitch-engine"
version = "0.1.0"
description = "Freelance pitch automation and context sandbox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "mcp>=1.28.1",
]

[project.scripts]
freelance-pitch-engine = "server:mcp.run"
pitch-engine-setup = "install:register_server"

[project.urls]
Homepage = "https://github.com/HassaanInspires/freelance-pitch-engine"
Repository = "https://github.com/HassaanInspires/freelance-pitch-engine.git"

[tool.hatch.build.targets.wheel]
py-modules = ["server.py", "install.py"]
